# OpenBugger

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  algovera_proposal.txt  debug_globals.py  openbugger_example.ipynb  paper_dump.md  parse_python.py  pyproject.toml  setup.py
data/datasets/eth_py150_open/: README.md
logic/: example_logic.py  logic_bugs.py  logic_injector.py  logic_injector_output_example.py
notebooks/: LangCST.ipynb  ast_notebook.ipynb  bugger_analys_all_bugs_leetcode.json  bugger_analys_results.json  bugger_analys_results_wrong.json  code_list.json  conversation.ipynb  cst_mutators_examples.ipynb  cst_mutators_factory.ipynb  cst_mutators_logic.ipynb  cst_mutators_sequence.ipynb  doc_string_extraction.ipynb  gpt_parsel_unittest.ipynb  leetcode copy.ipynb  leetcode.ipynb  libcst_notebook_nomemwrapper.ipynb  libcst_provider.ipynb  max_bugs.ipynb  openbugger.ipynb  openbugger_example.ipynb  openbugger_example_noimports.ipynb  py150k-exploration.ipynb  python-to-ast-example.ipynb  test_fishing007.py
openbugger/: bugger.py  context.py
openbugger/bugs/: controlflow.py  data.py  lessons_learned.md  logical.py  numpy.py  readme.md  type.py
openbugger/cli/: parse.py
openbugger/datasets/: py150k.py
openbugger/parse/: __init__.py  python2ast.py
papers/: paper_dump.md
syntax/: example_syntax.py  syntax_injector.py
