[tool.poetry]
name = "openbugger"
version = "0.1.0"
description = "A professional bugging tool for python"
authors = [
    "Tommaso Furnarello <tommaso@gmai.com>",
    "Fabrizio Milo <mistobaan@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^6.0.0"
mypy = "^0.790"
pytest = "^6.1.2"

[tool.black]
py38 = true
include = '\.pyi?$'
line_length = 88

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.flake8]
max-line-length = 88
